# AnathemaOS

./: .gitignore  CMakeLists.txt  README.md  boot.s  build_image.sh  grub.cfg  kernel.c  linker.ld  setup  validate.sh
arch/: CMakeLists.txt
arch/i386/: tty.c  vga.h
isodir/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  boot.s  main.c
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: tty.c
kernel/libc/: CMakeLists.txt  stdlib.h  yvals.h
kernel/libc/platform/: platform.h
kernel/libc/platform/os/: sbrk.c
kernel/libc/stdlib/: malloc.c
kernel/platform/: platform.h
kernel/platform/os/: mmap.c
kernel/tty/: tty.h
libc/: CMakeLists.txt  LibCHeaders.cmake  malloc.c  printf.c  stdio.h  string.h  strlen.c
libc/stdio/: printf.c  printf.h
libc/stdlib/: malloc.c
libc/string/: CMakeLists.txt  memcmp.c  memmove.c  memset.c  strlen.c  strlen.h
scripts/: build_binutils.sh  build_gcc.sh  build_gdb.sh  build_grub.sh  build_qemu.sh  run_image.sh  setup_build.sh  validate.sh
toolchain/: build_gcc.sh
toolchain/CMake/: GCC-Config.cmake
toolchain/cmake/: GCC-Config.cmake
user/libc/: CMakeLists.txt  yvals.h
user/libc/stdlib/: free.c  malloc.c
user/libc/string/: memcpy.c
